# Go2-Adaptive-LIO

./: LICENSE  README.md
faster-lio/config/: faster_mid360.yaml  velodyne.yaml  velodyne_HDL32E.yaml  velodyne_liosam.yaml
faster-lio/launch/: mapping_mid360.launch  mapping_velodyne.launch
faster-lio/rviz_cfg/: loam_livox.rviz
faster-lio/src/: laser_mapping.cc
go2_gazebo-sim/Robot_Cmd/: CMakeLists.txt  package.xml
go2_gazebo-sim/Robot_Cmd/launch/: keyboard_teleop.launch
go2_gazebo-sim/Robot_Cmd/src/: teleop_node.cpp
go2_gazebo-sim/Robot_Control/: CMakeLists.txt  package.xml  robot_controller.cpp  robot_controller.hpp
go2_gazebo-sim/Robot_Control/actor_model/: actor.onnx
go2_gazebo-sim/Robot_Control/common/: LegController.cpp  LegController.h  MathUtilities.h  OrientationEstimator.cpp  OrientationEstimator.h  QuadRobot.h  QuadRobotDynamics.h  SpatialInertial.h  StateEstimatorContainer.h  cTypes.h  cppTypes.h  orientation_tools.h  spatial.h
go2_gazebo-sim/Robot_Control/controller/: CT_Controller.cpp  CT_Controller.h
go2_gazebo-sim/Robot_Control/controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_RL.cpp  FSM_State_RL.h  FSM_States.cpp  FSM_States.h  SafetyChecker.cpp  SafetyChecker.h  TransitionData.h  cpuMLP.h  history_wrapper.cpp  history_wrapper.h
go2_gazebo-sim/Robot_Control/launch/: RobotBringup.launch  RobotBringupStairs.launch
go2_gazebo-sim/Robot_Control/lcm-types/: file_list.txt  imu_t.lcm  motor_cmd_t.lcm  motor_state_t.lcm  rc_cmd_t.lcm
go2_gazebo-sim/Robot_Control/lcm-types/cpp/: imu_t.hpp  motor_cmd_t.hpp  motor_state_t.hpp  rc_cmd_t.hpp
go2_gazebo-sim/Robot_Control/lcm-types/lcmtypes/: imu_t.java  motor_cmd_t.java  motor_state_t.java  rc_cmd_t.java
go2_gazebo-sim/Robot_Control/lcm-types/python/: imu_t.py  motor_cmd_t.py  motor_state_t.py  rc_cmd_t.py
go2_gazebo-sim/Robot_Control/robot/: RobotController.h  RobotRunner.cpp  RobotRunner.h
go2_gazebo-sim/Robot_Control/sim/: CMakeLists.txt
go2_gazebo-sim/Robot_Control/sim/gazebo/: CMakeLists.txt
go2_gazebo-sim/Robot_Control/sim/gazebo/include/interface/: IOInterface.h  IOROS.h  mathTools.h  mathTypes.h  timeMarker.h
go2_gazebo-sim/Robot_Control/sim/gazebo/include/message/: LowlevelCmd.h  LowlevelState.h
go2_gazebo-sim/Robot_Control/sim/gazebo/src/interface/: IOROS.cpp
go2_gazebo-sim/Robot_msgs/: CMakeLists.txt
go2_gazebo-sim/Robot_msgs/msg/: ContactVar.msg  StateEstimate.msg  keyboardCmd.msg
go2_gazebo-sim/Robot_ros/robots/go2_description/xacro/: gazebo.xacro  only_sensor.xacro  robot.xacro  robot_with_sensor.xacro
go2_gazebo-sim/Robot_ros/unitree_gazebo/: CMakeLists.txt
go2_gazebo-sim/Robot_ros/unitree_gazebo/launch/: normal.launch
go2_gazebo-sim/Robot_ros/unitree_gazebo/worlds/: 2f.world  earth.world
go2_gazebo-sim/Robot_ros/unitree_gazebo/worlds/two_floor/: model.config  model.sdf
go2_gazebo-sim/Robot_ros/unitree_legged_control/: CMakeLists.txt
go2_gazebo-sim/Robot_ros/unitree_legged_control/include/: joint_controller.h
go2_gazebo-sim/Robot_ros/unitree_legged_control/src/: joint_controller.cpp
velodyne_simulator/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  mid360.urdf.xacro
velodyne_simulator/velodyne_gazebo_plugins/: CMakeLists.txt
